# fix 404 align

--- a/src/App/pages/NotFound/NotFound.module.scss
+++ b/src/App/pages/NotFound/NotFound.module.scss
@@ -1,4 +1,5 @@
 .container {
+	height: 100%;
 	justify-content: center;
 	align-items: center;
 }
